Bustages on Promise.cpp:3162:13: error: unused function 'Promise_static_allSettled' [-Werror,-Wunused-function] when Gecko 68 merges to Beta on 2019-05-06
Categories
(Core :: JavaScript: Standard Library, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | blocking | verified |
People
(Reporter: NarcisB, Assigned: anba)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central as beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=cd69ff5de89dde21e85cdd7f1d23cdff07d57bf2&selectedJob=239878172
Log link: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=239878172&repo=try&lineNumber=649
:anba , this seems to be caused by Bug 1539694.
Can you please take a look?
Updated•7 years ago
|
Updated•7 years ago
|
| Reporter | ||
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 2•6 years ago
|
||
Looks like the fix has been accepted, so it could land now ?
| Assignee | ||
Updated•6 years ago
|
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/4b550f29706a
Add ifdef NIGHTLY_BUILD guards around all Promise.allSettled functions. r=jorendorff
Comment 4•6 years ago
|
||
The priority flag is not set for this bug.
:jorendorff, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
No longer occurs in recent beta simulations:
Updated•6 years ago
|
Updated•6 years ago
|
Comment 7•6 years ago
|
||
Please specify a root cause for this bug. See :tmaity for more information.
Updated•5 years ago
|
Updated•4 years ago
|
Description
•