Bug 1543948: Add ifdef NIGHTLY_BUILD guards around all Promise.allSettled functions. r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D28479